# LogWitch

./: .cproject  .gitignore  .project  CMakeLists.txt  Dockerfile  DockerfileTests  EntryToTextFormater.cpp  EntryToTextFormater.h  EntryToTextFormaterDefault.cpp  EntryToTextFormaterLog4cplus.cpp  EntryToTextFormaterLog4cplus.h  EntryToTextFormater_Logfile.cpp  EntryToTextFormater_Logfile.h  FilterListView.cpp  FilterListView.h  GenerateIfo.cmake  INSTALL  INSTALL_WINDOWS.txt  LogEntryCombinedWidget.cpp  LogEntryCombinedWidget.h  LogEntryTableWindow.cpp  LogEntryTableWindow.h  LogfileAnalyser.pro  LogfileAnalyserResources.qrc  README.md  Types.h  buildHelper_ubuntuPackage.sh  debCleaner.sh  getgitversion.cmake  logfileanalyser.cpp  logfileanalyser.h  logfileanalyser.ui  main.cpp  version.cmake
ActionRules/: Action.cpp  Action.h  ActionColorRow.cpp  ActionColorRow.h  ActionDataRewriter.cpp  ActionDataRewriter.h  ActionDiscardRow.cpp  ActionDiscardRow.h  ActionDoNothing.cpp  ActionParser.cpp  ActionParser.h  ActionRemoveRow.cpp  ActionRemoveRow.h  CMakeCache.txt  CMakeLists.txt  CompiledRulesStateSaver.cpp  CompiledRulesStateSaver.h  DisplayItemData.h  Expression.cpp  Expression.h  ExpressionFind.cpp  ExpressionMatch.cpp  ExpressionOperators.cpp  ExpressionParser.cpp  ExpressionParser.h  ExpressionValueGetter.cpp  ExpressionValueGetter.h  FilterRuleCompiled.cpp  FilterRuleCompiled.h  FilterRuleRaw.cpp  FilterRuleRaw.h  FilterRuleSelectionWindow.cpp  FilterRuleSelectionWindow.h  Rule.cpp  Rule.h  RuleTable.cpp  RuleTable.h  RulesTableView.cpp  TableModelRules.cpp  TableModelRules.h  (+8 more)
GUITools/: DockWidgetStateSaver.cpp  DockWidgetStateSaver.h  GetSetStateSaver.hxx  SignalMultiplexer.cpp  SignalMultiplexer.h  SignalMultiplexerStateApplier.cpp  SignalMultiplexerStateApplier.h  (+4 more)
logWitch/: .gitignore  CMakeLists.txt  ContextMenuLogEntryHeader.cpp  ContextMenuLogEntryHeader.h  ContextMenuManipulateHeader.cpp  ContextMenuManipulateHeader.h  EntryToTextFormater.h  EntryToTextFormaterDefault.cpp  EntryToTextFormaterDefault.h  EntryToTextFormaterLog4cplus.cpp  FilterListView.cpp  FilterListView.h  GenerateIfo.h.in  LFAAssert.h  LogEntryTableWindow.cpp  LogEntryTableWindow.h  LogfileAnalyserResources.qrc  ParserActionInterface.cpp  ParserActionInterface.h  Types.h  logfileanalyser.cpp  logfileanalyser.h  logfileanalyser.ui  main.cpp
logWitch/ActionRules/: .gitignore  Action.cpp  ActionDataRewriter.cpp  ActionDataRewriter.h  ActionDoNothing.h  ActionParser.cpp  CMakeLists.txt  CompiledRulesStateSaver.cpp  CompiledRulesStateSaver.h  Expression.cpp  Expression.h  ExpressionFind.cpp  ExpressionFind.h  ExpressionMatch.h  ExpressionOperators.cpp  ExpressionOperators.h  ExpressionParser.cpp  ExpressionParser.h  ExpressionRegEx.cpp  ExpressionRegEx.h  FilterRuleCompiled.cpp  FilterRuleCompiled.h  FilterRuleSelectionWindow.cpp  FilterRuleSelectionWindow.h  RuleTable.cpp  RuleTable.h  RulesTableView.h  TableModelRules.cpp  TableModelRules.h  TableModelRulesCompiled.cpp  TableModelRulesCompiled.h  ToolButtonTrashFilter.cpp  ToolButtonTrashFilter.h  ValueGetter.h  ValueGetterConstQString.cpp  ValueGetterLogEntry.cpp  ValueGetterLogEntry.h
logWitch/Auxiliary/: BoostSpiritQStringAdaption.hxx
logWitch/GUI/: DialogExportOptions.cpp  DialogExportOptions.h  DialogExportOptions.ui  QuickSearchBar.cpp  QuickSearchBar.h
logWitch/GUITools/: .gitignore  CMakeLists.txt  EventFilterToBoostFunction.cpp  EventFilterToBoostFunction.h  GetSetStateSaver.hxx  QScrollDownTableView.cpp  QScrollDownTableView.h  SlotToBoostFunction.h  SynchronizedHeaderView.cpp  SynchronizedHeaderView.h  WidgetStateSaver.cpp  WidgetStateSaver.h
logWitch/Help/: .gitignore  CMakeLists.txt  HelpAssistant.cpp  HelpAssistant.h
logWitch/Help/HelpText/: help.css  help.qhp
logWitch/LogData/: CMakeLists.txt  EntryToTextFormaterDefault.cpp  EntryToTextFormaterDefault.h  EntryToTextFormaterLog4cplus.cpp  EntryToTextFormaterLog4cplus.h  LogDataTypeRegistration.cpp  LogDataTypeRegistration.h  LogEntry.cpp  LogEntry.h  LogEntryAttributeNames.cpp  LogEntryAttributeNames.h  LogEntryFactory.cpp  LogEntryFactory.h  LogEntryParser.h  LogEntryParserModelConfiguration.cpp  LogEntryParserModelConfiguration.h  LogEntryParser_Logfile.cpp  LogEntryParser_Logfile.h  LogEntryParser_LogfileLWI.cpp  LogEntryParser_LogfileLWI.h  LogEntryParser_dummy.cpp  LogEntryParser_dummy.h  LogEntryParser_log4cplusSocket.cpp  LogEntryParser_log4cplusSocket.h  LogEntryStreamGetter.h  NewLogEntryMessage.h  ObjectCache.hxx  ParserStreamGetter.cpp  ParserStreamGetter.h  ParserStreamGetterFile.cpp  ParserStreamGetterFile.h
logWitch/LogData/test/: LogEntryStorerForTesting.cpp  LogEntryStorerForTesting.h  test_LogEntryParser_Logfile.cpp  test_init.cpp
logWitch/Models/: CMakeLists.txt  EntryFormatingModel.cpp  EntryFormatingModel.h  ExportableIfc.cpp  ExportableIfc.h  LogEntryFilter.cpp  LogEntryFilter.h  LogEntryFilterChain.cpp  LogEntryFilterChain.h  LogEntryRemoveFilter.cpp  LogEntryTableFilter.cpp  LogEntryTableFilter.h  LogEntryTableModel.cpp  LogEntryTableModel.h  LogEntryTableModelFileExporter.cpp  LogEntryTableModelFileExporter.h  StringCacheTreeItem.cpp  StringCacheTreeItem.h  StringCacheTreeModel.cpp  StringCacheTreeModel.h
logWitch/Plugins/: CMakeLists.txt
logWitch/Plugins/LogSource/: CMakeLists.txt
logWitch/Plugins/LogSource/Interface/: LogSourcePlugin.cpp  LogSourcePlugin.h
logWitch/Plugins/LogSource/dummy/: CMakeLists.txt  DummyLogSource.cpp  DummyLogSource.h  LogEntryParser_dummy.cpp  LogEntryParser_dummy.h
logWitch/Plugins/LogSource/log4cplus/: CMakeLists.txt  EntryToTextFormaterLog4cplus.cpp  EntryToTextFormaterLog4cplus.h  Log4cplusGUIIntegration.cpp  Log4cplusGUIIntegration.h  LogEntryParser_log4cplusSocket.cpp  LogEntryParser_log4cplusSocket.h
logWitch/Plugins/LogSource/python/: CMakeLists.txt  LogEntryParser_pythonSocket.cpp  LogEntryParser_pythonSocket.h  PythonGUIIntegration.cpp  PythonGUIIntegration.h
logWitch/Plugins/LogSource/python/examples/: logProducer.py
test/: CMakeLists.txt  TestExample.cpp  test_StringCacheTreeItem.cpp
(+58 files in other folders)
