SET(LFA_HELP_MOC_CLASSES
)

SET(LFA_HELP_LIB_SOURCES
	HelpAssistant.cpp
)

QT4_WRAP_CPP(LFA_HELP_MOC_SOURCES ${LFA_HELP_MOC_CLASSES})

ADD_LIBRARY(${LFA_HELP_LIB} STATIC ${LFA_HELP_LIB_SOURCES} ${LFA_HELP_MOC_SOURCES} )

SET(LFA_HELP_IN
	HelpText/help.qhcp
)

SET( LFA_HELP_OUT
	help.qhc
)

SET( LFA_HELP_COMPRESSED_HELP_OUT
	help.qch
)

FILE(GLOB LFA_HELP_SOURCE HelpText/*)

ADD_CUSTOM_COMMAND( OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${LFA_HELP_OUT}
	COMMAND ${QT_QCOLLECTIONGENERATOR_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/${LFA_HELP_IN} 
	COMMAND mv HelpText/${LFA_HELP_OUT} ${CMAKE_CURRENT_BINARY_DIR}/${LFA_HELP_OUT}
	COMMAND mv HelpText/${LFA_HELP_COMPRESSED_HELP_OUT} ${CMAKE_CURRENT_BINARY_DIR}/${LFA_HELP_COMPRESSED_HELP_OUT}
    DEPENDS ${HELP_SOURCE}
    COMMENT "Qt help collection"
	)

ADD_CUSTOM_TARGET( help ALL DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${LFA_HELP_OUT} )

INSTALL( FILES 
	${CMAKE_CURRENT_BINARY_DIR}/${LFA_HELP_OUT}
	DESTINATION ${HELPDIR} 
)
