SET(LFA_HELP_MOC_CLASSES
)

SET(LFA_HELP_LIB_SOURCES
	HelpAssistant.cpp
)

IF(USEQT5)
  QT5_WRAP_CPP(LFA_HELP_MOC_SOURCES ${LFA_HELP_MOC_CLASSES})
ELSE()
  QT4_WRAP_CPP(LFA_HELP_MOC_SOURCES ${LFA_HELP_MOC_CLASSES})
ENDIF()


ADD_LIBRARY(${LFA_HELP_LIB} STATIC ${LFA_HELP_LIB_SOURCES} ${LFA_HELP_MOC_SOURCES} )

SET(LFA_HELP_IN
	HelpText/help.qhcp
)

SET( LFA_HELP_OUT
	help.qhc
)

SET( LFA_HELP_COMPRESSED_HELP_OUT
	help.qch
)

FILE(GLOB LFA_HELP_SOURCE HelpText/*)

IF(UNIX)
  ADD_CUSTOM_COMMAND( OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${LFA_HELP_OUT}
  	COMMAND ${QT_QCOLLECTIONGENERATOR_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/${LFA_HELP_IN} 
  	COMMAND mv ${CMAKE_CURRENT_SOURCE_DIR}/HelpText/${LFA_HELP_OUT} ${CMAKE_CURRENT_BINARY_DIR}/${LFA_HELP_OUT}
  	COMMAND mv ${CMAKE_CURRENT_SOURCE_DIR}/HelpText/${LFA_HELP_COMPRESSED_HELP_OUT} ${CMAKE_CURRENT_BINARY_DIR}/${LFA_HELP_COMPRESSED_HELP_OUT}
      DEPENDS ${HELP_SOURCE}
      COMMENT "Qt help collection"
  	)
ELSE()
    STRING(REGEX REPLACE "/" "\\\\" FILE_HELP_OUT ${CMAKE_CURRENT_SOURCE_DIR}/HelpText/${LFA_HELP_OUT})
    STRING(REGEX REPLACE "/" "\\\\" FILE_HELP_OUT_BUILDDIR ${CMAKE_CURRENT_BINARY_DIR}/${LFA_HELP_OUT})
    STRING(REGEX REPLACE "/" "\\\\" FILE_HELP_OUTCOMPRESSED ${CMAKE_CURRENT_SOURCE_DIR}/HelpText/${LFA_HELP_COMPRESSED_HELP_OUT})
    STRING(REGEX REPLACE "/" "\\\\" FILE_HELP_OUTCOMPRESSED_BUILDDIR ${CMAKE_CURRENT_BINARY_DIR}/${LFA_HELP_COMPRESSED_HELP_OUT})


    ADD_CUSTOM_COMMAND( OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${LFA_HELP_OUT}
  	COMMAND ${QT_QCOLLECTIONGENERATOR_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/${LFA_HELP_IN} 
  	COMMAND move /Y ${FILE_HELP_OUT} ${FILE_HELP_OUT_BUILDDIR}
  	COMMAND move /Y ${FILE_HELP_OUTCOMPRESSED} ${FILE_HELP_OUTCOMPRESSED_BUILDDIR}
      DEPENDS ${HELP_SOURCE}
      COMMENT "Qt help collection"
  	)
ENDIF()


ADD_CUSTOM_TARGET( helpfiles ALL DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${LFA_HELP_OUT} )

INSTALL( FILES 
	${CMAKE_CURRENT_BINARY_DIR}/${LFA_HELP_OUT}
	${CMAKE_CURRENT_BINARY_DIR}/${LFA_HELP_COMPRESSED_HELP_OUT}
	DESTINATION ${HELPDIR} 
)
